--- a/res/css/style.css
+++ b/res/css/style.css
@@ -104,8 +104,7 @@ width: 20rem;
   transform:scale(1.3);
 }
 #counter{
-  padding-top: 14%;
-  margin-top: 0;
+  margin-top: 3rem;
 }
 section {
   display: flex;
